src/sources/snapshots/cdviz_collector__sources__format_converters__tests__parse_tap_no_plan.snap
---
source: src/sources/format_converters.rs
expression: result
---
plan: ~
tests:
  - description: Test without plan
    directive: ~
    number: 1
    status: ok
    yaml_diagnostics: ~
  - description: Another test
    directive: ~
    number: 2
    status: ok
    yaml_diagnostics: ~
version: ~
