src/sources/snapshots/cdviz_collector__sources__format_converters__tests__parse_tap_with_comments.snap
---
source: src/sources/format_converters.rs
expression: result
---
plan:
  end: 2
  start: 1
tests:
  - description: Connect
    directive: ~
    number: 1
    status: ok
    yaml_diagnostics: ~
  - description: Query
    directive: ~
    number: 2
    status: ok
    yaml_diagnostics: ~
version: 14
