src/sources/snapshots/cdviz_collector__sources__format_converters__tests__parse_tap_with_directives.snap
---
source: src/sources/format_converters.rs
expression: result
---
plan:
  end: 3
  start: 1
tests:
  - description: Normal test
    directive: ~
    number: 1
    status: ok
    yaml_diagnostics: ~
  - description: Skipped
    directive:
      kind: SKIP
      reason: not implemented
    number: 2
    status: ok
    yaml_diagnostics: ~
  - description: Known issue
    directive:
      kind: TODO
      reason: fix later
    number: 3
    status: not_ok
    yaml_diagnostics: ~
version: 14
