src/sources/snapshots/cdviz_collector__sources__format_converters__tests__parse_yaml_array.snap
---
source: src/sources/format_converters.rs
expression: result
---
- name: test1
  status: passed
- name: test2
  status: failed
