src/sources/snapshots/cdviz_collector__sources__format_converters__tests__parse_yaml_nested_structure.snap
---
source: src/sources/format_converters.rs
expression: result
---
nested:
  deep:
    value: found
stats:
  failed: 1
  passed: 3
  total: 4
