src/sources/snapshots/cdviz_collector__sources__format_converters__tests__parse_yaml_simple_object.snap
---
source: src/sources/format_converters.rs
expression: result
---
count: 42
name: MyTestSuite
version: 1.0.0
